This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

15-Dec-2002 (Lars Duening)  (3.3.328)
  - (prolang.y) It is no longer possible to defined a variable to be
      of type 'void' (reported by Gnomi).

14-Dec-2002 (Lars Duening)  (3.3.327)
  - (xalloc, smalloc, sysmalloc, gcollect, dependent files) Cleaned up the
      allocator interface somewhat, so that the MALLOC_-tracing is now
      handled by the xalloc layer, and that the GC no longer relies on
      the internal structures of smalloc.

14-Dec-2002 (Lars Duening)  (3.3.326)
  - (object.c) Efuns save_() and restore_() can now handle non-lambda
      closures, symbols and quoted arrays.  This required a new savefile
      format, though.

12-Dec-2002 (Lars Duening)  (3.3.325)
  - (mapping.c) Removed a memory leak: free_empty_mapping() did not
     clear the refcount.

11-Dec-2002 (Lars Duening)  (3.3.324)
  - (doc/concepts/negotiation, src/wk/) Added some telnet protocol
      related documentation.
  - (func_spec, lex.c, prolang.y, interpret.c) New operators '&&=' and
     '||=' (suggested by Croft).

09-Dec-2002 (Lars Duening)  (3.3.323)
  - (mudlib/telnetneg.c) Updated (thanks, Fiona!)
  - (mudlib/test_master.c) Added testcode for using charmode (thanks, Fiona!)
  - (comm) Fiona provided more patches: SAVE_NOECHO, which makes sure that
      the client can switch to CHARMODE before also setting NOECHO; and
      SIMULATE_CHARMODE which allows the mudlib to switch to charmode even
      if the client can do only linemode.
  - (files.c) Efuns copy_file() and rename() no longer throw errors
      on failures, but just return a non-0 value (reported by Menaures).

05-Dec-2002 (Lars Duening)  (3.3.322)
  - (config.h, comm, gcollect.c, main.c) Replaced USE_PTHREAD by USE_PTHREADS.
  - (comm.c) Before printing the prompt, current_object is set to NULL
      so that the player's catch_tell() is sure to be able to see the