@@ -182,6 +182,7 @@ Lars Duening thanks:
      Henk Stokhorst (Tha@wxs.nl)
      Holger Kremss (jur94ewp@studserv.uni-leipzig.de, Holger@web.de,
        Holger@Wunderland)
+     Jason Hitt (jhitt25@swbell.net)
      Joern Rennecke (amylaar@cygnus.co.uk)
      Jose Manuel Roman (roman@wol.es, Theuzifan uzi@simauria.upv.es)
      Juergen Weickert (Sissi@UNItopia)
