@@ -30,12 +30,12 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 328)
-(Parent-Version lpmud 3-3 327)
-(Version-Log "It is no longer possible to define a variable to be of type 'void'.")
+(Project-Version lpmud 3-3 329)
+(Parent-Version lpmud 3-3 328)
+(Version-Log "Corrected a compilation error.")
 (New-Version-Log
 "")
-(Checkin-Time "Sun, 15 Dec 2002 01:07:48 -0700")
+(Checkin-Time "Sun, 15 Dec 2002 10:17:01 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -71,8 +71,8 @@
   ;; Information about the driver and the distribution in general
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.8 644))
-  (CREDITS (lpmud/d/22_CREDITS 1.70.1.53 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.391 644))
+  (CREDITS (lpmud/d/22_CREDITS 1.70.1.54 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.392 644))
   (HISTORY (lpmud/f/49_HISTORY 1.292 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.19 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -177,7 +177,7 @@
   (src/my-alloca.h (lpmud/f/29_my-alloca. 1.3.1.2 644))
   (src/my-rusage.h (lpmud/f/28_my-rusage. 1.7 644))
   (src/object.h (lpmud/44_object.h 1.34.1.19 644))
-  (src/object.c (lpmud/45_object.c 1.62.1.88.1.5 644))
+  (src/object.c (lpmud/45_object.c 1.62.1.88.1.6 644))
   (src/otable.h (lpmud/f/27_otable.h 1.8.1.4 644))
   (src/otable.c (lpmud/43_otable.c 1.22.1.6 644))
   (src/parser.c (lpmud/l/13_parser.c 1.1 644))
@@ -227,7 +227,7 @@
   (src/port.h (lpmud/38_port.h 1.30.1.4.1.15 644))
   (src/port.c (lpmud/39_port.c 1.17.1.7 644))
   (src/prolang.h (lpmud/f/19_prolang.h 1.17 644))
-  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.65.1.10 644))
+  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.65.1.11 644))
   (src/ptrtable.h (lpmud/m/26_ptrtable.h 1.4 644))
   (src/ptrtable.c (lpmud/m/27_ptrtable.c 1.7.1.1 644))
   (src/random.h (lpmud/f/18_random.h 1.3 644))
